fix item view spacing

--- a/src/components/view-item/stats-item/styles.scss
+++ b/src/components/view-item/stats-item/styles.scss
@@ -3,5 +3,5 @@
 
   font-size: 22px;
 
-  padding: 0 100px;
+  padding: 0 64px;
 }
